# Management

./: CMakeLists.txt  README.md
Assets/: .gitignore
Assets/Photon/PhotonUnityNetworking/Resources/: PhotonServerSettings.asset
Assets/Prefabs/: Cell.prefab  Player.prefab  PlayerCanvas.prefab
Assets/Resources/: Cell.prefab  ListIcons.prefab  Player.prefab  PlayerCanvas.prefab  PlayerItem.prefab
Assets/Scenes/: GameScene.unity  MainScene.unity  MenuScene.unity  TestScene.unity
Assets/Scripts/: Controller.cs  Panel.cs  Player.cs  Request.cs
Assets/Scripts/Controller/: Controller.cs  GameManager.cs  LobbyManager.cs  Player.cs  PlayerControl.cs
Assets/Scripts/ForTestingScene/: Info.cs  Month.cs  ReadyButton.cs  State.cs
Assets/Scripts/Model/: AutoFabric.cs  AutomatedFabric.cs  Bank.cs  Director.cs  Fabric.cs  Management.cs  SimpleFabric.cs  WorldState.cs
Assets/Scripts/View/: Background.cs  ListIcons.cs  Panel.cs  PlayerInfo.cs  Progress.cs  Request.cs  SwitchCanvas.cs  Switcher.cs  Timer.cs  ToolBar.cs
Assets/Scripts/View/CommonCanvas/: Panel.cs  PlayerIcon.cs  Request.cs  SpawnerPlayers.cs
Assets/Scripts/View/Lobby/: ListPlayer.cs  PlayerItem.cs
Assets/Scripts/View/MainMenu/: Settings.cs
Assets/Scripts/View/PlayerCanvas/: BackButton.cs  BuyButton.cs  (+8 more)
ProjectSettings/: EditorBuildSettings.asset  ProjectSettings.asset
TestingModel/: .gitignore  TestBank.cs
include/: Bank.h  Management.h
releases/Mac OS X.app/Contents/: Info.plist
src/Client/: CMakeLists.txt
src/Server/: CMakeLists.txt  main.cpp
src/common/: Bank.cpp  Management.cpp
(+25 files in other folders)
